# genkei

./: Cargo.toml  README.md  deny.toml  reset.css
genkei/: Cargo.toml
genkei-tests/: Cargo.toml
genkei-tests/src/: html_renderer.rs  html_tag.rs  lib.rs  style.rs
genkei/src/: attribute.rs  children.rs  context.rs  lib.rs  text_content.rs
genkei/src/color/: complex.rs  fq.rs  mod.rs  simple.rs
genkei/src/html/: attributes.rs  define.rs  deprecated.rs  htmx.rs  macros.rs  mod.rs  renderer.rs  tag.rs
genkei/src/style/: attribute.rs  builder.rs  mod.rs  renderer.rs  value.rs
genkei/src/style/styles/: backdrop_filter.rs  border.rs  color.rs  cursor.rs  display.rs  font.rs  gap.rs  height.rs  margin.rs  media_query.rs  mod.rs  padding.rs  text.rs  width.rs
genkei/src/style/styles/align/: align_content.rs  align_items.rs  align_self.rs  mod.rs
genkei/src/style/styles/flex/: flex_direction.rs  flex_wrap.rs  mod.rs
genkei/src/style/styles/font/: font_family.rs  font_size.rs  font_style.rs  mod.rs
genkei/src/style/styles/grid/: grid_column.rs  grid_row.rs  grid_template_columns.rs  grid_template_rows.rs  mod.rs
genkei/src/style/styles/justify/: justify_content.rs  justify_items.rs  justify_self.rs  mod.rs
genkei/src/style/styles/outline/: mod.rs  outline_style.rs
src/: element.rs  lib.rs  renderer.rs  tests.rs
src/html/: macros.rs  mod.rs  renderer.rs
src/style/: attribute.rs  mod.rs  style.rs
